# TP5_SC

./: .gitignore  .gitmodules  README.md
app/Gui/: Gui.cs
app/Socket/: SocketCommunication.cs  SocketConnection.cs  SocketReceiver.cs
app/Utils/: Utils.cs
driver/inc/: common.h  device_queue.h  dht11.h  tfmini.h
driver/src/: device.c  device_queue.c  dht11.c  drv.c  tfmini.c
drivers/dht11/src/: drv.c
server/: CMakeLists.txt
server/inc/: common.h  server.h  threads_handle.h
server/src/: server.c  threads_handle.c
